--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
     <!-- Form section -->
     <section id="form-section">
-        <form id="form" onsubmit="submitHandler(event)">
+        <form id="form" onsubmit="submitHandler(event)" action="./thank-you.html">
             <div style="display: flex; flex-direction: column; gap:3px">
-                <input placeholder="Enter your name" type="text" id="full-name" required>
+                <input placeholder="Enter your name" type="text" id="full-name" name="name" required>
                 <p style="font-size: .7em; color: red;" id="nameError"></p>
             </div>
             <input placeholder="Enter your email" type="email" name="email" required>
-            <select name="City" title="City" required>
+            <select name="city" title="City" required>
                 <option value="Minia">Minia</option>
                 <option value="Cairo">Cairo</option>
                 <option value="Alexandria">Alexandria</option>
@@ -51,14 +51,14 @@
                 stop when the mouse leaves.</h3>
             <div id="gallery-container">
                 <div id="imgs-container">
-                    <img class="img" src="./Assets/1.jpg" alt="">
-                    <img class="img" src="./Assets/2.jpg" alt="">
-                    <img class="img" src="./Assets/3.jpg" alt="">
-                    <img class="img" src="./Assets/1.jpg" alt="">
-                    <img class="img" src="./Assets/2.jpg" alt="">
-                    <img class="img" src="./Assets/3.jpg" alt="">
-                    <img class="img" src="./Assets/1.jpg" alt="">
-                    <img class="img" src="./Assets/2.jpg" alt="">
+                    <img class="img" src="/Assets/1.jpg" alt="">
+                    <img class="img" src="/Assets/2.jpg" alt="">
+                    <img class="img" src="/Assets/3.jpg" alt="">
+                    <img class="img" src="/Assets/1.jpg" alt="">
+                    <img class="img" src="/Assets/2.jpg" alt="">
+                    <img class="img" src="/Assets/3.jpg" alt="">
+                    <img class="img" src="/Assets/1.jpg" alt="">
+                    <img class="img" src="/Assets/2.jpg" alt="">
                 </div>
             </div>
             <div class="controls">
@@ -76,9 +76,9 @@
     <section id="opacityGallery">
         <h3 style="text-align: center; margin-bottom: 50px;">Hover</h3>
         <div style="display: flex; align-items: center; gap: 20px; justify-content: center; flex-wrap: wrap;">
-            <img class="op-img" src="./Assets/1.jpg" alt="">
-            <img class="op-img" src="./Assets/2.jpg" alt="">
-            <img class="op-img" src="./Assets/3.jpg" alt="">
+            <img class="op-img" src="/Assets/1.jpg" alt="">
+            <img class="op-img" src="/Assets/2.jpg" alt="">
+            <img class="op-img" src="/Assets/3.jpg" alt="">
         </div>
     </section>
 
@@ -89,9 +89,9 @@
             Click any image to delete. </p>
         <div id="container"
             style="display: flex; align-items: center; gap: 20px; justify-content: center; flex-wrap: wrap;">
-            <img class="op-img img-group" src="./Assets/1.jpg" alt="">
-            <img class="op-img img-group" src="./Assets/2.jpg" alt="">
-            <img class="op-img img-group" src="./Assets/3.jpg" alt="">
+            <img class="op-img img-group" src="/Assets/1.jpg" alt="">
+            <img class="op-img img-group" src="/Assets/2.jpg" alt="">
+            <img class="op-img img-group" src="/Assets/3.jpg" alt="">
             <div id="newImageBtn" class="op-img newImageBtn">
                 <p>+</p>
             </div>
